--- a/notesbox/videos/templates/register.html
+++ b/notesbox/videos/templates/register.html
@@ -26,13 +26,13 @@
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Username</label>
                   <input type="text" class="form-control" name="username" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                  <div id="emailHelp" class="form-text"></div>
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Password</label>
                   <input type="password" class="form-control" name="password" id="exampleInputPassword1">
                 </div>
-                <p>Already have account<a href="/login/">Login</a></p>
+                <p>Already have account <a href="/login/">Login</a></p>
                 <button type="submit" class="btn btn-primary">Submit</button>
           </form>  
     </div>
